# deepdoc-lib

./: .env.example  .gitignore  MANIFEST.in  PYPI_PUBLISH_SETUP.md  README.md  pyproject.toml
.github/workflows/: publish.yml
deepdoc/: __init__.py  config.py  download_models.py
deepdoc/common/: __init__.py  config_utils.py  connection_utils.py  file_utils.py  misc_utils.py  model_store.py  settings.py  token_utils.py
deepdoc/depend/: nltk_manager.py  num_tokens_from_string.py  rag_tokenizer.py  settings.py  surname.py
deepdoc/llm_adapter/: __init__.py  adapter.py  utils.py  vision.py
deepdoc/parser/: __init__.py  docling_parser.py  docx_parser.py  excel_parser.py  figure_parser.py  html_parser.py  json_parser.py  pdf_parser.py  tcadp_parser.py  txt_parser.py  utils.py
deepdoc/parser/resume/: step_two.py
deepdoc/parser/resume/entities/: corporations.py
deepdoc/rag/res/deepdoc/: .gitattributes
deepdoc/vision/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  table_structure_recognizer.py
scripts/: download_models.py
tests/: test_model_store.py
