[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdoc_lib"
version = "0.1.0"
description = "[RAGFlow](https://ragflow.io/) is an open-source RAG (Retrieval-Augmented Generation) engine based on deep document understanding. It offers a streamlined RAG workflow for businesses of any scale, combining LLM (Large Language Models) to provide truthful question-answering capabilities, backed by well-founded citations from various complex formatted data."
authors = [{ name = "Zhichang Yu", email = "yuzhichang@gmail.com" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "datrie==0.8.2",
    "anthropic==0.69.0",
    "beartype>=0.18.5,<0.19.0",
    "beautifulsoup4>=4.12.0",
    "chardet==5.2.0",
    "demjson3==3.0.6",
    "hanziconv==0.3.2",
    "html5lib>=1.1",
    "jinja2>=3.1.0",
    "modelscope>=1.20.0,<2.0.0",
    "markdown==3.6",
    "nltk==3.9.1",
    "numpy>=1.26.0,<2.0.0",
    "ollama==0.2.1",
    "onnxruntime==1.19.2",
    "openai>=1.45.0",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pdfplumber==0.10.4",
    "pillow>=11.0.0",
    "pyclipper==1.3.0.post5",
    "pypdf==6.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "pyyaml>=6.0.0",
    "requests==2.32.2",
    "scikit-learn==1.5.0",
    "shapely==2.0.5",
    "six==1.16.0",
    "strenum==0.4.15",
    "tencentcloud-sdk-python==3.0.1215",
    "tiktoken>=0.7.0",
    "xgboost==1.6.0",
    "xpinyin==0.7.6",
    "zhipuai==2.0.1",
    "google-generativeai>=0.8.1,<0.9.0",
    "trio>=0.29.0",
    "setuptools>=75.2.0,<76.0.0",
    "huggingface-hub>=0.25.0,<0.26.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu==1.19.2; sys_platform != 'darwin' and platform_machine == 'x86_64'",
    "torch",
]

[project.scripts]
deepdoc-download-models = "deepdoc.download_models:main"

[dependency-groups]
test = [
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "pytest>=8.3.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "requests>=2.32.2",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
deepdoc = ["dict/huqie.txt"]

[tool.ruff]
line-length = 200
exclude = [".venv", "rag/svr/discord_svr.py"]

[tool.ruff.lint]
extend-select = ["ASYNC", "ASYNC1"]
ignore = ["E402"]

[tool.pytest.ini_options]
markers = [
    "p1: high priority test cases",
    "p2: medium priority test cases",
    "p3: low priority test cases",
]
